--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <body  class="bg-cover bg-center h-screen" style="background-image: url('/src//assets/bg.png');">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Add this to your index.html file -->
+<script src="https://apis.mapmyindia.com/advancedmaps/v1/{YOUR_API_KEY}/map_load?v=1.5"></script>
+
   </body>
 </html>
